--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,10 @@
   text-align: center;
 }
 
+.table th {
+  height: 100px;
+}
+
 .col_sum {
   width: 10%;
 }
@@ -89,6 +93,7 @@
   }
   .head__row th {
     padding: 0;
+    height: auto;
   }
   .race {
     width: 100%;
@@ -124,11 +129,13 @@
 }
 
 .race__label {
-  display: block;
+  display: flex;
   cursor: pointer;
   transition: 0.5s ease-in-out;
   width: 100%;
   height: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .race__label:hover {
